--- a/src/Components/NewCollections/NewCollections.css
+++ b/src/Components/NewCollections/NewCollections.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    height: 90vh;
+    margin-bottom: 100px;
 }
 
 .new-collections h1{
@@ -18,6 +18,7 @@
   border-radius: 10px;
   background-color: #252525;  
 }
+
 .collections{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
